--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Ресто" />
     <meta name="mobile-web-app-capable" content="yes" />
-    
+    <link rel="manifest" href="/manifest.json" />
+
     <!-- Icons -->
     <link rel="icon" type="image/svg+xml" href="/icons/icon-192.svg" />
     <link rel="apple-touch-icon" href="/icons/icon-192.svg" />
